@@ -7,8 +7,6 @@ URGENT PROBLEMS
 ===============
 Should handle these soon.
 
-- Add a expose-(all-)windows menu.
-
 - Add a binding/functions to circulate over children of the current child.
 
 MAYBE
