@@ -206,7 +206,7 @@ It is particulary useful with CLISP/MIT-CLX.")
   "Config(Placement group): Query mode window placement")
 (defparameter *circulate-mode-placement* 'bottom-middle-placement
   "Config(Placement group): Circulate mode window placement")
-(defparameter *expose-mode-placement* 'top-left-placement
+(defparameter *expose-mode-placement* 'top-left-child-placement
   "Config(Placement group): Expose mode window placement (Selection keys position)")
 
 
